# Propius

./: .gitignore  README.md  compose.yml  compose_eval.yml  compose_eval_gpu.yml  compose_eval_gpu_nd.yml  compose_propius.yml  compose_ps_leaf.yml  compose_redis.yml  config.py  download.sh  environment.yml  environment_cuda.yml  global_config.yml  init.sh  install.sh  pyproject.toml  requirements.txt  setup.py
datasets/: download.sh
docker/: client_db.yml  client_db_0.yml  client_db_1.yml  compose.yml  compose_eval.yml  compose_eval_gpu.yml  compose_propius.yml  job_client_db.yml  job_db.yml
docs/: allocation.md  application_layer.md  binding_layer.md  client.md  design.md  parser.ipynb  scheduler.md  scheduling_layer.md
evaluation/: commons.py  evaluation_config.yml  requirements.txt  requirements_peripheral.txt  single_evaluation_config.yml
fedscale_client/: executor.py
log/: CM-irs-1690768590.txt  CM-srdf-1689608363.txt  CM0-irs-2023-08-08:17:02:27:10.txt  JM-irs-1690748315.txt  JM-irs-1690768593.txt  JM-irs-2023-08-08:17:02:33:85.txt  JM-srdf-1689608364.txt  LB-irs-2023-08-08:16:38:00:70.txt  LB-irs-2023-08-08:17:02:22:21.txt  SC-irs-1690748310.txt  SC-irs-1690768596.txt  SC-irs-2023-08-08:17:02:30:43.txt  SC-srdf-1689608365.txt
propius/: global_config.yml  requirements.txt
propius.egg-info/: PKG-INFO  SOURCES.txt
propius_client/: commons.py  propius_client.py  propius_client_aio.py
propius_controller/: config.py  global_config.yml
propius_job/: propius_job.py
propius_parameter_server/: config.py  global_config.yml
scripts/: analyze.py  analyze_round_acc.py  analyze_roundtime.py  analyze_util.py  calc_round.py  clean.sh  config.py  cp2server.sh  get_benchmark.ipynb  handle_data.sh  monitor_eval.sh  monitor_jobs.sh  monitor_propius.sh  parser.ipynb  select_profile.sh  server2local.sh
sim/: calculate_memory_size.ipynb  clean.sh  cp2server.sh  get_benchmark.ipynb  handle_data.sh  parser.ipynb  server2local.sh  test.py
test_client/: client.py  client_driver.py
test_job/: poisson_generator.py
tests/: config.py  config_dry.yml  config_test_policy.py  dry_config.py  test_0_job_register.py  test_10_distributed_measurement.py  test_1_client_checkin.py  test_2_client_assign.py  test_3_scheduler.py  test_4_ps_put_get.py  test_5_integrate.py  test_5_root_integrate.py  test_6_leaf_put_get.py  test_7_leaf_integrate.py  test_8_large_file.py  test_9_measurement.py  (+10 more)
(+1563 files in other folders)
